# NuboQAbot

./: .dockerignore  Dockerfile  README.md  pyproject.toml
nuboqabot/: bot.py  embedder.py  llm.py  loader.py  main.py  rag.py
